--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "2.0.6"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "4.17.1",
+    "mongoose": "^5.11.8"
   }
 }
