[ADD] DB connection

--- a/.envExample
+++ b/.envExample
@@ -1,4 +1,2 @@
 PORT=
-URI=
-USER=
-PASSWORD=
+URI=mongodb+srv://<username>:<password>@sandbox.7cw9f.mongodb.net/<dbname>?retryWrites=true&w=majority
