--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "main": "./api/index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./api/index.js -L",
-    "start": "NODE_ENV=production node ./api/index.js"
+    "build": "NODE_ENV=production node ./api/index.js"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   },
   "repository": {
     "type": "git",
