--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "NODE_ENV=production node ./api/index.js"
   },
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": "12.x"
   },
   "repository": {
     "type": "git",
