--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "./api/index.js",
-      "dest": "/"
+      "src": "/api/index.js",
+      "dest": "/api/blog"
     }
   ]
 }
