--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "./api/index.js",
+      "src": "/api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/index.js",
-      "dest": "/api/blog"
+      "src": "/(.*)*",
+      "dest": "/api/index.js"
     }
-  ]
+  ],
+  "env": {
+    "URI": "@uri",
+    "PORT": "@port"
+  }
 }
