--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/Ulisessg/web-projects-api#readme",
   "devDependencies": {
-    "nodemon": "2.0.6"
+    "nodemon": "2.0.6",
+    "vercel": "^21.0.1"
   },
   "dependencies": {
     "cors": "2.8.5",
