--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,18 @@
   ],
   "routes": [
     {
-      "src": "/(.*)*",
-      "dest": "/api/index.js",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
-        "Access-Control-Allow-Methods": "GET, POST"
+        "source": "/api/(*.)*",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET, POST"
+          }
+        ]
       }
     }
   ],
