--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
   ],
   "routes": [
     {
-      "source": "/api/(*.)*",
+      "src": "/api/(*.)*",
+      "dest": "/api/index.js",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST"
