--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "./api/index.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST"
-      }
+      "dest": "/api/index.js"
     }
   ],
   "env": {
