--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
   "routes": [
     {
       "src": "/api/(.*)",
+      "headers": {
+        "Content-Type": "application/json",
+        "Access-Control-Allow-Origin": "*"
+      },
       "dest": "/api/index.js"
     }
   ],
