--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/Ulisessg/web-projects-api#readme",
   "devDependencies": {
-    "nodemon": "2.0.6",
-    "vercel": "^21.0.1"
+    "nodemon": "2.0.7",
+    "vercel": "21.3.3"
   },
   "dependencies": {
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "helmet": "^4.3.1",
-    "mongoose": "5.11.8"
+    "helmet": "4.4.1",
+    "mongoose": "5.12.3"
   }
 }
