--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vercel": "21.3.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "4.4.1",
