--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,20 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/api/blog/(.*)",
       "headers": {
         "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "*"
       },
       "dest": "/api/index.js"
+    },
+    {
+      "src": "/api/gist/add-gist",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://ulisessg.com",
+        "Content-Type": "application/json",
+        "dest": "/api/index.js"
+      }
     }
   ],
   "env": {
