--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,14 @@
         "Content-Type": "application/json",
         "dest": "/api/index.js"
       }
+    },
+    {
+      "src": "/api/gist",
+      "headers": {
+        "Content-Type": "application/json",
+        "Access-Control-Allow-Origin": "*",
+        "dest": "/api/index.js"
+      }
     }
   ],
   "env": {
