--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,7 @@
     },
     {
       "src": "/api/gist",
+      "methods": ["GET"],
       "headers": {
         "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "*",
@@ -25,6 +26,7 @@
     },
     {
       "src": "/api/gist/add-gist",
+      "methods": ["POST"],
       "headers": {
         "Access-Control-Allow-Origin": "https://ulisessg.com",
         "Content-Type": "application/json",
