[ADD] Envs created

--- a/vercel.json
+++ b/vercel.json
@@ -35,7 +35,9 @@
     }
   ],
   "env": {
-    "URI": "@uri",
-    "PORT": "@port"
+    "URI": "@last-uri",
+    "PORT": "@port",
+    "EMAIL": "@email",
+    "PASSWORD": "@password"
   }
 }
