--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   },
   "homepage": "https://github.com/Ulisessg/web-projects-api#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.2",
+    "@types/nodemon": "^1.19.0",
     "nodemon": "2.0.7",
+    "typescript": "3.9.3",
     "vercel": "21.3.3"
   },
   "dependencies": {
