--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Api of UD, website that will be focused on sharing knowledge, mainly about technology and a design system.",
   "main": "./api/index.js",
   "scripts": {
+    "lint": "eslint \"api/**\" --fix",
     "dev": "NODE_ENV=development nodemon ./api/index.js -L",
     "build": "NODE_ENV=production node ./api/index.js"
   },
@@ -25,6 +26,11 @@
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "@types/nodemon": "^1.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "2.0.7",
     "typescript": "3.9.3",
     "vercel": "21.3.3"
