--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint \"api/**\" --fix",
     "dev": "NODE_ENV=development nodemon ./api/index.js -L",
-    "build": "NODE_ENV=production node ./api/index.js"
+    "build": "NODE_ENV=production node ./api/index.js",
+    "prepare": "husky install"
   },
   "engines": {
     "node": "14.x"
@@ -31,6 +32,7 @@
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "husky": "^6.0.0",
     "nodemon": "2.0.7",
     "typescript": "3.9.3",
     "vercel": "21.3.3"
