--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "@types/nodemon": "^1.19.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
@@ -42,6 +43,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "4.4.1",
-    "mongoose": "5.12.3"
+    "mongoose": "5.12.3",
+    "swagger-ui-express": "^4.1.6"
   }
 }
