[ADD] Production added

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint \"api/**\" --fix",
     "dev": "NODE_ENV=development nodemon ./api/index.ts -L",
-    "build": "NODE_ENV=production node ./api/index.js",
+    "build": "tsc",
+    "start": "NODE_ENV=production node ./api/index.js",
     "prepare": "husky install"
   },
   "engines": {
