--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "lint": "eslint \"api/**\" --fix",
     "dev": "NODE_ENV=development nodemon ./api/index.ts -L",
-    "build": "tsc",
-    "start": "NODE_ENV=production node ./api/index.js",
+    "build": "NODE_ENV=production node ./api/index.ts",
     "prepare": "husky install"
   },
   "engines": {
