--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
   },
   "homepage": "https://github.com/Ulisessg/web-projects-api#readme",
   "devDependencies": {
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "@types/node": "^15.12.2",
-    "@types/nodemon": "^1.19.0",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "husky": "^6.0.0",
+    "@types/cors": "2.8.10",
+    "@types/express": "4.17.12",
+    "@types/node": "15.12.2",
+    "@types/nodemon": "1.19.0",
+    "@types/swagger-ui-express": "4.1.2",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
+    "eslint": "7.28.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.23.4",
+    "husky": "6.0.0",
     "nodemon": "2.0.7",
     "typescript": "3.9.3",
     "vercel": "21.3.3"
   },
   "dependencies": {
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "4.4.1",
     "mongoose": "5.12.3",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "4.1.6"
   }
 }
