--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-import": "2.23.4",
     "husky": "6.0.0",
     "nodemon": "2.0.7",
+    "ts-node": "8.9.1",
     "typescript": "4.3.2",
     "vercel": "23.0.0"
   },
