--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,17 +2,15 @@ name: Deploy
 on:
   push:
     branches: [main]
-    pull_request: [main]
+  pull_request:
+    branches: [main]
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup node
-    - uses: actions/setup-node@v2
-    with:
-      node-version: '14'
-    - run: npm i && npm i -g typescript && npm i -g vercel
-    - run: npm run lint
-    - run: tsc
-    - run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - run: npm install && npm install -g typescript && npm install -g vercel
+      - run: npm run lint
+      - run: tsc
+      - run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
