--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,4 @@ jobs:
       - run: npm install && sudo npm install -g typescript && sudo npm install -g vercel
       - run: npm run lint
       - run: tsc
-      - run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+      - run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --force
