--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint \"api/**\" --fix",
     "dev": "NODE_ENV=development nodemon ./api/index.ts -L",
     "start": "NODE_ENV=production node ./out/api/index.js",
+    "buidld": "tsc",
     "prepare": "husky install"
   },
   "engines": {
