--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,5 @@ jobs:
       - uses: actions/setup-node@v2
       - run: npm install
       - run: npm run lint
+      - run: tsc
       - run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} -c
