[ADD] Destination added

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
       "headers": {
         "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "*"
-      }
+      },
+      "dest": "/api/index.ts"
     },
     {
       "src": "/api/gist",
@@ -16,7 +17,8 @@
       "headers": {
         "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "*"
-      }
+      },
+      "dest": "/api/index.ts"
     },
     {
       "src": "/api/gist/add-gist",
@@ -26,7 +28,8 @@
       "headers": {
         "Access-Control-Allow-Origin": "ulisessg.com",
         "Content-Type": "application/json"
-      }
+      },
+      "dest": "/api/index.ts"
     }
   ],
   "env": {
